fixed some more widths so it can be readable

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -287,6 +287,11 @@ body {
     cursor: pointer;
 }
 
+.geneHoverPathway{
+  word-break: break-all !important;
+  white-space: normal !important;
+  width: 180px !important;
+}
 
 
 .hoverScore{
